cabal-version:       >=1.10

name:                workflows
version:             0.1.0.0
license-file:        LICENSE
author:              Harry Maclean
maintainer:          harry@hmac.dev
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable workflows
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14
                     , containers >= 0.4
                     , profunctors
                     , dotgen
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wincomplete-patterns
  default-extensions:
    LambdaCase
    FlexibleInstances
    RankNTypes
    DeriveFunctor
    DeriveFoldable
    DeriveTraversable
